--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "^16.18.32",
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
+    "@types/react-gtm-module": "^2.0.3",
     "classnames": "^2.3.2",
     "eslint": "^8.41.0",
     "framer-motion": "^10.12.16",
@@ -23,7 +24,7 @@
     "react": "^18.2.0",
     "react-app-polyfill": "^3.0.0",
     "react-dom": "^18.2.0",
-    "react-ga4": "^2.1.0",
+    "react-gtm-module": "^2.0.11",
     "react-i18next": "^12.3.1",
     "react-pose": "^4.0.10",
     "react-scripts": "5.0.1",
